# tracing-actix-web

./: Cargo.toml
examples/opentelemetry/: Cargo.toml
src/: lib.rs  middleware.rs
