[workspace]
members = ["."]

[package]
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"
name = "tracing-actix-web"
version = "0.5.1-alpha.0"

license = "MIT/Apache-2.0"

documentation = "https://docs.rs/tracing-actix-web/"
readme = "README.md"
repository = "https://github.com/LukeMathWalker/tracing-actix-web"

description = "Structured logging middleware for actix-web."

categories = ["asynchronous", "web-programming"]
keywords = ["http", "actix-web", "tracing", "logging"]

[features]
default = ["emit_event_on_error"]
emit_event_on_error = []

[dependencies]
actix-web = {version = "=4.0.0-rc.2", default-features = false}
pin-project = "1.0.0"
tracing = "*"
tracing-futures = "*"
uuid = {version = "0.8.1", features = ["v4"]}

[dev-dependencies]
tracing-log = "*"
tracing-subscriber = {version = "*", features = ["registry", "env-filter"]}
